Backport Bukkit changes